overflow fixed

--- a/src/pages/Report.module.css
+++ b/src/pages/Report.module.css
@@ -50,7 +50,6 @@
     width: 90%;
     margin: 5% auto 0;
     padding: 10px;
-    overflow: scroll;
   }
   .containerMax {
     background-image: url("https://ak.picdn.net/shutterstock/videos/1018020805/thumb/1.jpg");
